--- a/src/component/site/dashboard/events.use.scss
+++ b/src/component/site/dashboard/events.use.scss
@@ -4,7 +4,7 @@
   border: 0.1rem solid $color-cion-primary;
   border-radius: 0.3rem;
   height: 40rem;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 blockquote.event {
