--- a/src/component/site/site.use.scss
+++ b/src/component/site/site.use.scss
@@ -52,17 +52,15 @@ footer {
 
     img {
       display: inline-block;
-      height: 4rem;
-      margin: 0.5rem;
-      padding: 0.3rem;
+      height: 5rem;
+      padding: 0.8rem;
       vertical-align: middle;
-      width: 4rem;
+      width: 5rem;
     }
 
     h4 {
       display: inline-block;
       margin: 0;
-      margin-left: 1rem;
       vertical-align: middle;
     }
   }
@@ -70,6 +68,9 @@ footer {
 
 .collapsed {
   grid-template-columns: 5rem 1fr;
+  #toggle-button {
+    margin: 0.5rem;
+  }
 }
 
 header {
@@ -117,17 +118,36 @@ main {
   transition: 0.1s;
 }
 
+.scroll {
+  margin: 0;
+  overflow: auto;
+}
+
 @media (max-width: 768px) {
+  .scroll {
+    overflow-x: auto;
+    overflow-y: hidden;
+  }
+
   .container {
     grid-template-areas: "header header" "nav nav" "content content" "user footer";
     grid-template-columns: 1fr 1fr;
     grid-template-rows: auto auto 1fr auto;
+    height: auto;
     min-height: 100vh;
+
+    overflow-x: hidden;
 
     nav a {
       .link-text {
         display: none;
       }
+    }
+
+    main {
+      height: auto;
+      overflow-x: auto;
+      padding-bottom: 0;
     }
   }
 
@@ -135,9 +155,5 @@ main {
     grid-template-areas: "nav user header" "content content content" "footer footer footer";
     grid-template-columns: 1fr auto auto;
     grid-template-rows: auto 1fr auto;
-
-    #toggle-button {
-      margin: 0.5rem;
-    }
   }
 }
