--- a/src/component/table/table.use.scss
+++ b/src/component/table/table.use.scss
@@ -36,6 +36,10 @@ td.last {
   width: 99%;
 }
 
+table {
+  margin-bottom: 0;
+}
+
 @media (min-width: 80rem) {
   .cion-table-header {
     grid-template-areas: "search page-browser go-to-field page-length";
